# AOC2024

./: .pre-commit-config.yaml  LICENSE  README.md  day1.py  day2.py  day3.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
tests/: day1_test.py  day2_test.py  day3_test.py
