[metadata]
name = aoc2024
version = 0.1.0
description = Advent of code 2024 solutions in python3.
long_description = file: README.md
log_description_content_type = text/markdown
url = https://github.com/saurabh10041998/AOC2024
author = Saurabh Shinde
author_email = shindesaurabhpict@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules =
    day1
    day2
    day3
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude = 
    tests*
    testing*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
